postcss/testData/inspections/nesting/emptyNest.pcss
div {
  <error descr="Nested ruleset selector should contain '&'">@nest</error> {

  }
}